<resources>
    <string name="app_name">S7 Reports</string>
    <string name="menu_text">Меню</string>
    <string name="flight_button">Полетели!</string>
    <string name="info_flight_button">Информация о рейсе</string>
    <string name="about_button">Справка</string>

    <string name="fix_time_button">Фиксировать время</string>
    <string name="act_button">Тексты актов</string>
    <string name="duties_button">Обязанности</string>
    <string name="back_button">Главное меню</string>

    <string name="flightNumber_textView">Рейс</string>
    <string name="flightData_textView">Дата</string>
    <string name="enter_time">Введите время</string>
    <string name="save_time_button">Сохранить</string>
    <string name="exit_button">Выход</string>

    <string name="time_text"><b>Время и задержка</b></string>
    <string name="appear_textView">Явка</string>
    <string name="docs_textView">Документы</string>
    <string name="beg_pax_textView">Начало PAX</string>
    <string name="close_textView">Закрытие</string>
    <string name="end_pax_textView">Конец PAX</string>
    <string name="delay_textView">Задержка</string>

    <string name="kitchen_button"><b>Кухня</b></string>
    <string name="y_textView">Эконом</string>
    <string name="c_textView">Бизнес</string>
    <string name="k_textView">Экипаж</string>
    <string name="chml_textView">CHML</string>
    <string name="meml_textView">MEML</string>
    <string name="fiml_textView">FIML</string>
    <string name="vgml_textView">VGML</string>
    <string name="brml_textView">BRML</string>
    <string name="total_textView">Итого</string>

    <string name="cargo_button"><b>Коммерческая загрузка</b></string>
    <string name="baggage_textView">Багаж</string>
    <string name="cargo_textView">Груз</string>
    <string name="mail_textView">Почта</string>
    <string name="weapon_textView">Оружие</string>
    <string name="dang_textView">Опасный груз</string>
    <string name="animal_textView">Животные</string>

    <string name="choose_1L_button">1L</string>
    <string name="choose_1R_button">1R</string>
    <string name="choose_3L_button">3L</string>
    <string name="choose_3R_button">3R</string>

    <string name="example_flightNumber">0000</string>
    <string name="example_time">00:00</string>
    <string name="example_data">00.00.0000</string>
    <string name="example_del">0</string>
    <string name="noInfo"><b>Данный отчёт не закончен!</b></string>
    <string name="madeBy">Приложение полностью разработано Кичигиной С.А.</string>
    <string name="noNumberFlight">Ошибка! Введите номер и дату рейса!</string>
    <string name="error">Ошибка!</string>
    <string name="existNumberFlight">Ошибка! Данный рейс уже есть в базе!</string>

    <string name="acts_text">
        <b>На недовложение посуды:</b> \n
        При вскрытии опломбированной телеги в полете обнаружено недовложение: стакан малый – 3 (три) шт.; вилка 2 (две) шт. \n
        <b>На неисправность съемного БКО:</b> \n
        При приеме, при обслуживании пассажиров в полете была выявлена неисправность тормозной системы телеги №S7GH20225. \n
        <b>На утерю:</b> \n
        При обслуживании пассажиров в полете утеряно 2 (два) ножа. \n
        <b>На недовложение питания:</b> \n
        При вскрытии опломбированной телеги в полете обнаружено недовложение 10 (десяти) порций питания: масло – 10 (десять) шт, прибор одноразовый – 10 (десять) шт. \n
        <b>На обнаружение посторонних предметов в бортовом питании: </b> \n
        При вскрытии упаковки сэндвича с курицей была обнаружена гусеница. \n
        <b>На выявление несанкционированной замены блюд: </b> \n
        При обслуживании пассажиров в полете было выявлена несанкционированная замена блюд: вместо 3 (трех) порций ГБ «гречка с
грибами и морковью» загружено 3 (три) порции блюда «картофельный хашбраун со стручковой фасолью» \n
    </string>

    <string name="PurserDuty">
        <i>СБ организует и контролирует работу членов кабинного экипажа в соответствии с
технологиями и стандартами, принятыми в Авиакомпании, и несет ответственность за
организацию и координацию действий кабинного экипажа при выполнении процедур в обычной, нештатной и аварийной ситуациях.</i> \n
        <b>Старший бортпроводник несет ответственность за:</b> \n
a) выполнение процедур по обеспечению безопасности в пассажирской кабине и качество
обслуживания пассажиров, согласно установленным стандартам и технологиям; \n
b) организацию проведения всех процедур по обеспечению безопасности полета; \n
c) соблюдение требований стандартов и технологий членами кабинного экипажа при
выполнении ими обязанностей; \n
d) поддержание положительного имиджа Авиакомпании. \n
e) наличие необходимого комплекта документов и бланков для выполнения рейса; \n
f) проведение предполетного брифинга и послеполетного разбора; \n
g) грамотное распределение обязанностей в кабинном экипаже; \n
h) выполнение требований к внешнему виду и поведению ЧКЭ при ношении форменной
одежды; \n
i) соблюдение требований по взаимодействию летного экипажа с кабинным экипажем; \n
j) подготовку пассажирской кабины ВС к рейсу в соответствии с «ККП АСО»; \n
k) своевременное и грамотное заполнение CLB; \n
l) организацию, документальное оформление предполетного досмотра при выполнении
рейсов из зарубежных аэропортов (при необходимости); /n
m) работу системы связи и коммуникации (интерфон, PA, IFE); \n
n) наличие всех средств обслуживания (питания, мягкого инвентаря, КПП, КМС, УПК) на рейсе; \n
o) прием/сдачу продукции ООО «Меркурий» для пассажиров бизнес класса; \n
p) своевременное информирование смежных служб и КВС о сбойных ситуациях; \n
q) проведение информационной работы в рейсе (в том числе PRAM); \n
r) организацию подсчета пассажиров на борту (если необходимо); \n
s) организацию оказания первой помощи в рейсе; \n
t) организацию обслуживания пассажиров в полете всеми видами обслуживания; \n
u) своевременное заполнение отчета в ССР (ССС при необходимости) и документации по
рейсу.
    </string>
    <string name="FA_1R_Duty">
        <b>ЧКЭ 1R А-320 NEO несет ответственность за:</b> \n
a) выполнение процедур по обеспечению безопасности в пассажирской кабине и качество
обслуживания пассажиров бизнес класса, согласно установленным стандартам и
технологиям; \n
b) исполнение обязанностей СБ: \n
        <ul type="disc">
            <li> по указанию СБ, </li> \n
            <li> на время контролируемого отдыха СБ, </li> \n
            <li> при ухудшении самочувствия СБ, </li> \n
            <li> потери работоспособности СБ; </li> \n
        </ul>
c) экипировку мягким инвентарем передней туалетной комнаты и БКС в течение рейса и в
промежуточном аэропорту; \n
d) наличие на борту ВС ЭИ для пассажиров бизнес класса, КШС. \n
e) количество и качество питания, посуды и БКО, загруженного в переднюю БКС.
    </string>
    <string name="FA_3L_Duty">
        <b>ЧКЭ 3L А-320 NEO несет ответственность за:</b> \n
a) выполнение процедур по обеспечению безопасности в пассажирской кабине и качество
обслуживания пассажиров экономического класса, согласно установленным стандартам и
технологиям; \n
b) количество и качество питания, посуды и БКО, загруженного в заднюю БКС.

    </string>
    <string name="FA_3R_Duty">
        <b>ЧКЭ 3R А-320 NEO несет ответственность за:</b> \n
a) выполнение процедур по обеспечению безопасности в пассажирской кабине и качество
обслуживания пассажиров экономического класса, согласно установленным стандартам и
технологиям. \n
b) приём/сдачу багажа, груза, почты; \n
c) прием/сдачу оружия, опасного и ценного груза, страховой и фельдъегерской почты,
инвалидного кресла с элементами питания при необходимости; \n
d) наличие на борту ВС КПП, КМС, УПК, ЭИ для пассажиров экономического класса.
    </string>
</resources>