<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/menu_text"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/flight_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/flight_button"
            android:background="@color/button_color"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TableRow
            android:id="@+id/table_row_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_row">

                <Button
                    android:id="@+id/choose_1L_button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_1L_button"
                    android:background="@color/button_color"
                    android:textColor="@color/text_color"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/table_row"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/choose_1R_button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_1R_button"
                    android:background="@color/button_color"
                    android:textColor="@color/text_color"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/table_row"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/choose_3L_button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_3L_button"
                    android:background="@color/button_color"
                    android:textColor="@color/text_color"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/table_row"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/choose_3R_button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_3R_button"
                    android:background="@color/button_color"
                    android:textColor="@color/text_color"
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@+id/table_row"
                    tools:ignore="ButtonStyle" />
        </TableRow>

        <Button
            android:id="@+id/info_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/info_flight_button"
            android:background="@color/button_color"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table_row_hidden" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/about_button"
            android:background="@color/button_color"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_button" />

        <TableRow
            android:id="@+id/table_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flight_button">

                <EditText
                    android:id="@+id/flight_num_editText"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:autofillHints="@string/example_flightNumber"
                    android:background="@color/button_color"
                    android:hint="@string/flightNumber_textView"
                    android:inputType="numberSigned"
                    android:maxLength="4"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"

                    tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/flight_data_editText"
                    android:layout_width="92dp"
                    android:layout_height="50dp"
                    android:background="@color/button_color"
                    android:hint="@string/flightData_textView"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"

                    tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        </TableRow>



</androidx.constraintlayout.widget.ConstraintLayout>